<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CurrencyConverter">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/from"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/spinner1"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_from" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/to"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/spinner2"
            app:layout_constraintTop_toBottomOf="@id/spinner1" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_to" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/conversion"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_conversion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_amount"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/convert_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/convert"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conversion" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/result_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/blue_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/convert_btn"
            app:layout_constraintStart_toStartOf="@+id/convert_btn"
            app:layout_constraintTop_toBottomOf="@+id/convert_btn"
            tools:text="13.4 USD" />

        <View
            android:id="@+id/dotLine1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#FF909090"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_txt" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu_medium"
            android:textColor="@color/blue_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dotLine1"
            tools:text="1 USD = 70 INR" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>